[package]
name = "hydracache-sqlx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLx adapter helpers for HydraCache query result caching."

[dependencies]
async-trait.workspace = true
hydracache.workspace = true
hydracache-core.workspace = true
hydracache-db.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
testcontainers-modules.workspace = true
tokio.workspace = true
