[package]
name = "hydracache-transport-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis pub/sub external invalidation transport for HydraCache."
readme = "README.md"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
hydracache.workspace = true
redis.workspace = true
tokio.workspace = true

[dev-dependencies]
testcontainers-modules.workspace = true
tokio.workspace = true
